testdata/baselines/reference/submodule/compiler/es6ImportDefaultBindingFollowedWithNamedImport1WithExport.errors.txt
client.ts(1,1): error TS1191: An import declaration cannot have modifiers.
client.ts(3,1): error TS1191: An import declaration cannot have modifiers.
client.ts(3,34): error TS2614: Module '""server.ts""' has no exported member 'a'. Did you mean to use 'import a from ""server.ts""' instead?
client.ts(5,1): error TS1191: An import declaration cannot have modifiers.
client.ts(5,34): error TS2614: Module '""server.ts""' has no exported member 'a'. Did you mean to use 'import a from ""server.ts""' instead?
client.ts(7,1): error TS1191: An import declaration cannot have modifiers.
client.ts(7,34): error TS2614: Module '""server.ts""' has no exported member 'x'. Did you mean to use 'import x from ""server.ts""' instead?
client.ts(7,37): error TS2614: Module '""server.ts""' has no exported member 'a'. Did you mean to use 'import a from ""server.ts""' instead?
client.ts(9,1): error TS1191: An import declaration cannot have modifiers.
client.ts(9,34): error TS2614: Module '""server.ts""' has no exported member 'x'. Did you mean to use 'import x from ""server.ts""' instead?
client.ts(11,1): error TS1191: An import declaration cannot have modifiers.
client.ts(11,34): error TS2614: Module '""server.ts""' has no exported member 'm'. Did you mean to use 'import m from ""server.ts""' instead?


==== server.ts (0 errors) ====
    var a = 10;
    export default a;
    
==== client.ts (12 errors) ====
    export import defaultBinding1, { } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x1: number = defaultBinding1;
    export import defaultBinding2, { a } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                                     ~
!!! error TS2614: Module '""server.ts""' has no exported member 'a'. Did you mean to use 'import a from ""server.ts""' instead?
    export var x1: number = defaultBinding2;
    export import defaultBinding3, { a as b } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                                     ~
!!! error TS2614: Module '""server.ts""' has no exported member 'a'. Did you mean to use 'import a from ""server.ts""' instead?
    export var x1: number = defaultBinding3;
    export import defaultBinding4, { x, a as y } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                                     ~
!!! error TS2614: Module '""server.ts""' has no exported member 'x'. Did you mean to use 'import x from ""server.ts""' instead?
                                        ~
!!! error TS2614: Module '""server.ts""' has no exported member 'a'. Did you mean to use 'import a from ""server.ts""' instead?
    export var x1: number = defaultBinding4;
    export import defaultBinding5, { x as z,  } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                                     ~
!!! error TS2614: Module '""server.ts""' has no exported member 'x'. Did you mean to use 'import x from ""server.ts""' instead?
    export var x1: number = defaultBinding5;
    export import defaultBinding6, { m,  } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                                     ~
!!! error TS2614: Module '""server.ts""' has no exported member 'm'. Did you mean to use 'import m from ""server.ts""' instead?
    export var x1: number = defaultBinding6;
    